--- a/features/compass/src/main/AndroidManifest.xml
+++ b/features/compass/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2013-2019 Metin Kale
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -20,12 +19,12 @@
     package="com.metinkale.prayer.compass">
 
 
-
     <application>
         <activity
             android:name=".MainActivity"
             android:label="@string/compass"
-            android:logo="@mipmap/ic_compass">
+            android:logo="@mipmap/ic_compass"
+            android:screenOrientation="portrait">
             <intent-filter android:order="1">
                 <action android:name="android.intent.action.VIEW" />
 
