--- a/features/missedprayers/src/main/AndroidManifest.xml
+++ b/features/missedprayers/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2013-2019 Metin Kale
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -24,7 +23,8 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/missedPrayers"
-            android:logo="@mipmap/ic_launcher">
+            android:logo="@mipmap/ic_launcher"
+            android:screenOrientation="portrait">
             <intent-filter android:order="1">
                 <action android:name="android.intent.action.VIEW" />
 
