--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ allprojects {
         mavenLocal()
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
         maven { url "https://maven.google.com" }
     }
 }
