--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ android {
         minSdkVersion 16
         multiDexEnabled true
         versionName '3.7.4'
-        versionCode 211
+        versionCode 213
     }
 
     buildTypes {
@@ -91,7 +91,6 @@ android {
 
 dependencies {
     implementation project(':features:base')
-    implementation project(':features:times')
     implementation project(':features:compass')
     implementation project(':features:widget')
     implementation project(':features:intro')
@@ -103,6 +102,9 @@ dependencies {
     implementation project(':features:missedprayers')
     implementation project(':features:names')
     implementation project(':features:settings')
-    implementation 'androidx.core:core:1.0.1'
-    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation project(':features:times')
+    implementation project(':features:praytimes')
+
+
+    implementation 'androidx.appcompat:appcompat:1.0.2'
 }
