--- a/features/times/src/main/AndroidManifest.xml
+++ b/features/times/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2013-2019 Metin Kale
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -80,6 +79,11 @@
             </intent-filter>
         </receiver>
 
+        <receiver android:name=".MiBandToolsReceiver">
+            <intent-filter>
+                <action android:name="com.metinkale.prayer.MIBANDACTION" />
+            </intent-filter>
+        </receiver>
 
     </application>
 
