--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,8 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath 'com.android.tools.build:gradle:3.5.1'
+        classpath 'com.google.ar.sceneform:plugin:1.12.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
