--- a/features/times/build.gradle
+++ b/features/times/build.gradle
@@ -71,6 +71,6 @@ dependencies {
     implementation 'androidx.media:media:1.0.1'
     implementation 'androidx.legacy:legacy-preference-v14:1.0.0'
     implementation 'net.steamcrafted:materialiconlib:1.1.5'
-    implementation 'com.github.florent37:inline-activity-result:+'
+    implementation 'com.github.florent37:inline-activity-result:1.0.2'
 
 }
