--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,7 @@ android {
     flavorDimensions "store"
     productFlavors {
         fdroid {
-            versionNameSuffix ' F-Droid'
+            versionNameSuffix ' F-Droid' //excludeInFDroid // fdroid adds this suffix itself
             dimension "store"
         }
         play {
