--- a/features/compass/build.gradle
+++ b/features/compass/build.gradle
@@ -31,7 +31,7 @@ android {
         minSdkVersion 21
         versionCode 1
         versionName "1.0"
-        resValue 'string', 'GoogleApiKey', GoogleApiKey
+        resValue 'string', 'GoogleApiKey', GoogleApiKey //excludeInFDroid
     }
 
     buildTypes {
