--- a/features/times/build.gradle
+++ b/features/times/build.gradle
@@ -23,14 +23,15 @@ android {
         }
     }
 
-    compileSdkVersion 28
+    compileSdkVersion 30
 
 
     defaultConfig {
-        targetSdkVersion 28
+        targetSdkVersion 30
         minSdkVersion 21
         versionCode 1
         versionName "1.0"
+        resValue 'string', 'IGMGApiKey', IGMGApiKey
     }
 
     buildTypes {
@@ -60,15 +61,15 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':features:base')
     implementation project(':features:praytimes')
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.koushikdutta.ion:ion:2.2.1'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'joda-time:joda-time:2.9.6:no-tzdb'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.evernote:android-job:1.2.6'
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.media:media:1.0.1'
+    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'androidx.media:media:1.2.0'
     implementation 'androidx.legacy:legacy-preference-v14:1.0.0'
     implementation 'net.steamcrafted:materialiconlib:1.1.5'
     implementation 'com.github.florent37:inline-activity-result:1.0.2'
