--- a/features/compass/build.gradle
+++ b/features/compass/build.gradle
@@ -15,6 +15,7 @@
  */
 
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 
 android {
     sourceSets {
@@ -69,5 +70,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     playImplementation 'com.google.android.gms:play-services-maps:17.0.0' //excludeInFDroid
     playImplementation 'com.google.android.gms:play-services-gcm:17.0.0' //excludeInFDroid
-    playImplementation 'com.google.android.gms:play-services-location:17.1.0' //excludeInFDroid
+    playImplementation 'com.google.android.gms:play-services-location:17.1.0'
+    implementation "androidx.core:core-ktx:+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version" //excludeInFDroid
+}
+repositories {
+    mavenCentral()
 }
