WIP - upgrade to latest sdk

--- a/features/about/src/main/AndroidManifest.xml
+++ b/features/about/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
     <application>
         <activity
             android:name=".MainActivity"
-            android:label="@string/about">
+            android:label="@string/about"
+            android:exported="true">
             <intent-filter android:order="1">
                 <action android:name="android.intent.action.VIEW" />
 
