--- a/features/dhikr/src/main/AndroidManifest.xml
+++ b/features/dhikr/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
             android:name=".MainActivity"
             android:label="@string/dhikr"
             android:logo="@mipmap/ic_dhikr"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:exported="true">
             <intent-filter android:order="1">
                 <action android:name="android.intent.action.VIEW" />
 
