--- a/features/intro/src/main/AndroidManifest.xml
+++ b/features/intro/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
 
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:exported="true">
             <intent-filter android:order="1">
                 <action android:name="android.intent.action.VIEW" />
 
