--- a/features/hadith/src/main/AndroidManifest.xml
+++ b/features/hadith/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         <activity
             android:name=".MainActivity"
             android:icon="@mipmap/ic_hadith"
-            android:label="@string/hadith">
+            android:label="@string/hadith"
+            android:exported="true">
             <intent-filter android:order="1">
                 <action android:name="android.intent.action.VIEW" />
 
