--- a/features/missedprayers/src/main/AndroidManifest.xml
+++ b/features/missedprayers/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
             android:name=".MainActivity"
             android:label="@string/missedPrayers"
             android:logo="@mipmap/ic_launcher"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:exported="true">
             <intent-filter android:order="1">
                 <action android:name="android.intent.action.VIEW" />
 
