--- a/features/settings/src/main/AndroidManifest.xml
+++ b/features/settings/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
 
 
     <application>
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:exported="true">
             <intent-filter android:order="1">
                 <action android:name="android.intent.action.VIEW" />
 
