--- a/features/tesbihat/src/main/AndroidManifest.xml
+++ b/features/tesbihat/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
             android:name=".MainActivity"
             android:icon="@mipmap/ic_tesbihat"
             android:label="@string/tesbihat"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:exported="true">
             <intent-filter android:order="1">
                 <action android:name="android.intent.action.VIEW" />
 
