--- a/features/base/build.gradle
+++ b/features/base/build.gradle
@@ -70,22 +70,15 @@ android {
 
 
 dependencies {
-
-
-
-    // androidx dependencies. TODO check whats really needed
-    implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'androidx.annotation:annotation:1.1.0'
-    implementation 'androidx.percentlayout:percentlayout:1.0.0'
-
-
-    implementation 'joda-time:joda-time:2.9.6:no-tzdb'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0-alpha04'
-    implementation 'com.koushikdutta.ion:ion:3.1.0'
-    implementation 'androidx.browser:browser:1.2.0'
-    implementation 'androidx.legacy:legacy-preference-v14:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-
-
+    api 'androidx.multidex:multidex:2.0.1'
+    api 'androidx.annotation:annotation:1.5.0'
+    api 'androidx.percentlayout:percentlayout:1.0.0'
+    api 'joda-time:joda-time:2.9.6:no-tzdb'
+    api 'androidx.appcompat:appcompat:1.5.1'
+    api 'com.google.android.material:material:1.8.0-beta01'
+    api 'com.koushikdutta.ion:ion:3.1.0'
+    api 'androidx.browser:browser:1.4.0'
+    api 'androidx.legacy:legacy-preference-v14:1.0.0'
+    api 'androidx.constraintlayout:constraintlayout:2.1.4'
+    api 'androidx.recyclerview:recyclerview:1.2.1'
 }
