--- a/android-config.json
+++ b/android-config.json
@@ -1,6 +1,6 @@
 {
   "api_url": "https://open-prayer-times.lm.r.appspot.com/",
-  "use_diyanet_rest": true,
+  "use_diyanet_rest": false,
   "use_igmg_rest": true,
   "use_london_rest": false,
   "use_nvc_rest": false,
