--- a/features/times/src/main/AndroidManifest.xml
+++ b/features/times/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.metinkale.prayer.times">
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application>
