--- a/features/times/build.gradle
+++ b/features/times/build.gradle
@@ -39,7 +39,10 @@ android {
         minSdkVersion 23
         versionCode 1
         versionName "1.0"
-        resValue 'string', 'IGMGApiKey', IGMGApiKey
+        if (project.hasProperty('IGMGApiKey'))
+            resValue 'string', 'IGMGApiKey', IGMGApiKey
+        else
+            resValue 'string', 'IGMGApiKey', ""
     }
 
     buildTypes {
