--- a/features/settings/build.gradle
+++ b/features/settings/build.gradle
@@ -62,8 +62,7 @@ android {
 }
 
 dependencies {
-
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':features:base')
-
+    implementation project(':features:calendar')
 }
