--- a/features/dhikr/build.gradle
+++ b/features/dhikr/build.gradle
@@ -66,8 +66,8 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':features:base')
-    implementation "androidx.room:room-runtime:2.5.0-rc01"
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-common-java8:2.5.1"
+    api "androidx.room:room-runtime:2.5.0-rc01"
+    api "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    api "androidx.lifecycle:lifecycle-common-java8:2.5.1"
     annotationProcessor "androidx.room:room-compiler:2.5.0-rc01"
 }
