update agp + fixes

--- a/features/hadith/build.gradle
+++ b/features/hadith/build.gradle
@@ -31,8 +31,6 @@ android {
     defaultConfig {
         targetSdkVersion 33
         minSdkVersion 23
-        versionCode 1
-        versionName "1.0"
     }
 
     buildTypes {
@@ -59,6 +57,7 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    namespace 'com.metinkale.prayer.hadith'
 }
 
 dependencies {
