--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,20 +23,17 @@ plugins {
 
 android {
 
+    namespace "com.metinkale.prayer"
+
     sourceSets {
         main.assets.srcDirs += ['../changelogs']
     }
-
     packagingOptions {
-        exclude 'META-INF/LICENSE.txt'
-        exclude 'META-INF/NOTICE.txt'
-        exclude '.readme'
-        exclude 'META-INF/LICENSE-LGPL-2.1.txt'
-        exclude 'META-INF/LICENSE-LGPL-3.txt'
-        exclude 'META-INF/LICENSE-W3C-TEST'
-        exclude 'META-INF/DEPENDENCIES'
-
+        resources {
+            excludes += ['META-INF/LICENSE.txt', 'META-INF/NOTICE.txt', '.readme', 'META-INF/LICENSE-LGPL-2.1.txt', 'META-INF/LICENSE-LGPL-3.txt', 'META-INF/LICENSE-W3C-TEST', 'META-INF/DEPENDENCIES']
+        }
     }
+
 
     compileSdkVersion 33
 
@@ -46,7 +43,7 @@ android {
         minSdkVersion 23
         multiDexEnabled true
         versionName '3.7.7'
-        versionCode 222
+        versionCode 223
     }
 
     buildTypes {
@@ -85,6 +82,9 @@ android {
 
 
     compileOptions {
+        // Flag to enable support for the new language APIs
+        coreLibraryDesugaringEnabled true
+        // Sets Java compatibility to Java 8
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -111,6 +111,7 @@ dependencies {
     implementation project(':features:settings')
     implementation project(':features:times')
     implementation 'androidx.appcompat:appcompat:1.6.1'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
 }
 
 
