--- a/features/base/build.gradle
+++ b/features/base/build.gradle
@@ -19,9 +19,6 @@ plugins {
 }
 
 android {
-    lintOptions {
-        disable 'MissingTranslation'
-    }
 
 
     sourceSets {
@@ -69,6 +66,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    lint {
+        disable 'MissingTranslation'
+    }
+    namespace 'com.metinkale.prayer.base'
 }
 
 
@@ -92,5 +93,5 @@ dependencies {
 
     implementation platform('com.google.firebase:firebase-bom:31.1.1')
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.9'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
 }
