--- a/features/calendar/build.gradle
+++ b/features/calendar/build.gradle
@@ -30,8 +30,6 @@ android {
     defaultConfig {
         targetSdkVersion 33
         minSdkVersion 23
-        versionCode 1
-        versionName "1.0"
     }
 
     buildTypes {
@@ -58,6 +56,7 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    namespace 'com.metinkale.prayer.calendar'
 }
 
 dependencies {
