--- a/features/dhikr/build.gradle
+++ b/features/dhikr/build.gradle
@@ -16,6 +16,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -32,8 +33,6 @@ android {
     defaultConfig {
         targetSdkVersion 33
         minSdkVersion 23
-        versionCode 1
-        versionName "1.0"
     }
 
     buildTypes {
@@ -60,14 +59,18 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    namespace 'com.metinkale.prayer.dhikr'
 }
 
 dependencies {
+    def room_version = "2.5.1"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':features:base')
-    api "androidx.room:room-runtime:2.5.0-rc01"
     api "androidx.lifecycle:lifecycle-extensions:2.2.0"
     api "androidx.lifecycle:lifecycle-common-java8:2.5.1"
-    annotationProcessor "androidx.room:room-compiler:2.5.0-rc01"
+
+    api "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
 }
