--- a/features/tesbihat/build.gradle
+++ b/features/tesbihat/build.gradle
@@ -32,8 +32,6 @@ android {
     defaultConfig {
         targetSdkVersion 33
         minSdkVersion 23
-        versionCode 1
-        versionName "1.0"
     }
 
     buildTypes {
@@ -57,6 +55,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    namespace 'com.metinkale.prayer.tesbihat'
 
 }
 
