--- a/features/widget/build.gradle
+++ b/features/widget/build.gradle
@@ -31,8 +31,6 @@ android {
     defaultConfig {
         targetSdkVersion 33
         minSdkVersion 23
-        versionCode 1
-        versionName "1.0"
 
 
     }
@@ -58,6 +56,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    namespace 'com.metinkale.prayer.widgets'
 
 }
 
