--- a/features/widget/src/main/AndroidManifest.xml
+++ b/features/widget/src/main/AndroidManifest.xml
@@ -15,8 +15,7 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.metinkale.prayer.widgets">
+    xmlns:tools="http://schemas.android.com/tools">
 
 
 
