--- a/features/base/build.gradle
+++ b/features/base/build.gradle
@@ -94,4 +94,5 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.1.1')
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
+    testImplementation "junit:junit:4.12"
 }
