--- a/features/times/build.gradle
+++ b/features/times/build.gradle
@@ -58,6 +58,14 @@ android {
     namespace 'com.metinkale.prayer.times'
 
 
+    compileOptions {
+        // Flag to enable support for the new language APIs
+        coreLibraryDesugaringEnabled true
+        // Sets Java compatibility to Java 8
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
 }
 
 dependencies {
@@ -82,4 +90,6 @@ dependencies {
     implementation 'androidx.compose.runtime:runtime-livedata'
     implementation "androidx.work:work-runtime-ktx:2.7.1"
     implementation 'androidx.documentfile:documentfile:1.0.1'
+
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
 }
