--- a/android-config.json
+++ b/android-config.json
@@ -5,5 +5,5 @@
   "use_london_rest": false,
   "use_nvc_rest": false,
   "use_semerkand_rest": false,
-  "use_search_rest": true
+  "use_search_rest": false
 }
