--- a/features/base/build.gradle
+++ b/features/base/build.gradle
@@ -70,6 +70,12 @@ android {
         disable 'MissingTranslation'
     }
     namespace 'com.metinkale.prayer.base'
+
+    testOptions {
+        unitTests.all {
+            it.useJUnitPlatform()
+        }
+    }
 }
 
 
@@ -77,7 +83,6 @@ dependencies {
     api 'androidx.multidex:multidex:2.0.1'
     api 'androidx.annotation:annotation:1.5.0'
     api 'androidx.percentlayout:percentlayout:1.0.0'
-    api 'joda-time:joda-time:2.9.6:no-tzdb'
     api 'androidx.appcompat:appcompat:1.6.1'
     api 'com.google.android.material:material:1.8.0-beta01'
     api 'com.koushikdutta.ion:ion:3.1.0'
@@ -94,5 +99,8 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.1.1')
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
-    testImplementation "junit:junit:4.12"
+    testImplementation "io.kotest:kotest-runner-junit5:5.6.2"
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation "io.mockk:mockk:1.4.1"
 }
