--- a/features/calendar/build.gradle
+++ b/features/calendar/build.gradle
@@ -50,9 +50,13 @@ android {
     }
 
     compileOptions {
+        // Flag to enable support for the new language APIs
+        coreLibraryDesugaringEnabled true
+        // Sets Java compatibility to Java 8
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
@@ -63,4 +67,5 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':features:base')
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
 }
