--- a/features/widget/build.gradle
+++ b/features/widget/build.gradle
@@ -58,11 +58,18 @@ android {
     }
     namespace 'com.metinkale.prayer.widgets'
 
+    compileOptions {
+        // Flag to enable support for the new language APIs
+        coreLibraryDesugaringEnabled true
+        // Sets Java compatibility to Java 8
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':features:times')
     implementation project(':features:base')
-
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
 }
